--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ workflows:
 jobs:
   build_test:
     docker:
-      - image: cimg/python:3.10.0
+      - image: cimg/python:3.10.13
     steps:
       - checkout
       - run:
@@ -22,19 +22,32 @@ jobs:
             python test_hello_world.py
   deploy:
     docker:
-      - image: cimg/python:3.10.0
+      - image: cimg/python:3.10.13
     steps:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: false
-      - run:
-          name: Build and push Docker image
-          command: |
-            pip install --user --no-cache-dir -r requirements.txt
-            ~/.local/bin/pyinstaller -F hello_world.py
-            echo 'export TAG=0.1.${CIRCLE_BUILD_NUM}' >> $BASH_ENV
-            echo 'export IMAGE_NAME=python-cicd-workshop' >> $BASH_ENV
-            source $BASH_ENV
-            docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG .
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-            docker push $DOCKER_LOGIN/$IMAGE_NAME
+    - run:
+        name: Upgrade pip and install dependencies
+        command: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip install --user --no-cache-dir -r requirements.txt
+    - run:
+        name: Set Python Path
+        command: |
+          echo "export PYTHONPATH=$(python -c 'import site; print(site.USER_SITE)')" >> $BASH_ENV
+          source $BASH_ENV
+    - run:
+        name: Install PyInstaller dependencies
+        command: |
+          pip install pyinstaller-hooks-contrib
+    - run:
+        name: Build and push Docker image
+        command: |
+          ~/.local/bin/pyinstaller --clean --onefile hello_world.py
+          echo 'export TAG=0.1.${CIRCLE_BUILD_NUM}' >> $BASH_ENV
+          echo 'export IMAGE_NAME=python-cicd-project' >> $BASH_ENV
+          source $BASH_ENV
+          docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG .
+          echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+          docker push $DOCKER_LOGIN/$IMAGE_NAME
